--- a/docs/reports/report4_approach1.ipynb
+++ b/docs/reports/report4_approach1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,8 +154,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1,3->0\n",
+    "7,8 ->1\n",
+    "............\n",
+    "1,3->0\n",
+    "5,6->1\n",
+    "7,8->2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +411,7 @@
     "# clf = LogisticRegression(random_state=0,max_iter=1000, solver='lbfgs', penalty='l2').fit(X_resampled, y_resampled)\n",
     "clf = LogisticRegression(random_state=0,max_iter=1000, solver='lbfgs', penalty='l2', class_weight='balanced').fit(X_train, y_train)\n",
     "# train_score = model.score(X_resampled, y_resampled)\n",
-    "train_score = model.score(X_train, y_train)\n",
+    "train_score = clf.score(X_train, y_train)\n",
     "\n",
     "print('train score:', train_score)\n",
     "\n",
@@ -415,13 +427,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.83274912 0.83575363 0.83685528 0.82513771 0.83343349]\n",
+      "0.8327858474410335\n",
+      "[[ 6130  4850]\n",
+      " [ 3498 35446]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Necessary imports: \n",
+    "# Necessary imports: Try cross validation\n",
     "from sklearn.model_selection import cross_val_score, cross_val_predict\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_predict\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import cross_val_predict\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "df1 = df1.dropna(subset=['clean_text', 'isced'])\n",
+    "corpus = df1['clean_text']\n",
+    "target = df1[\"isced\"]\n",
+    "\n",
+    "\n",
+    "vectorizer = CountVectorizer(binary=False, ngram_range=(1, 2), lowercase=True)\n",
+    "vectors_corpus = vectorizer.fit_transform(corpus)\n",
+    "\n",
+    "\n",
+    "clf = LogisticRegression(random_state=0,max_iter=1000, solver='lbfgs', penalty='l2', class_weight='balanced').fit(X_train, y_train)\n",
+    "scores = cross_val_score(clf, vectors_corpus, target, cv=5)\n",
+    "print(scores)\n",
+    "print(scores.mean())\n",
+    "\n",
+    "\n",
+    "y_pred = cross_val_predict(clf, vectors_corpus, target, cv=5)\n",
+    "conf_mat = confusion_matrix(target, y_pred)\n",
+    "print(conf_mat)"
    ]
   },
   {
@@ -429,15 +476,7 @@
    "execution_count": 128,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df1 = df1.dropna(subset=['clean_text', 'isced'])\n",
-    "corpus = df1['clean_text']\n",
-    "target = df1[\"isced\"]\n",
-    "\n",
-    "\n",
-    "vectorizer = CountVectorizer(binary=False, ngram_range=(1, 2), lowercase=True)\n",
-    "vectors_corpus = vectorizer.fit_transform(corpus)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -455,12 +494,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "clf = LogisticRegression(random_state=0,max_iter=1000, solver='lbfgs', penalty='l2', class_weight='balanced').fit(X_train, y_train)\n",
-    "scores = cross_val_score(clf, vectors_corpus, target, cv=5)\n",
-    "scores"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -475,21 +509,14 @@
      ]
     }
    ],
-   "source": [
-    "print(scores.mean())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_predict\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "y_pred = cross_val_predict(clf, vectors_corpus, target, cv=5)\n",
-    "conf_mat = confusion_matrix(target, y_pred)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -508,8 +535,31 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.64      0.56      0.59     10980\n",
+      "         8.0       0.88      0.91      0.89     38944\n",
+      "\n",
+      "    accuracy                           0.83     49924\n",
+      "   macro avg       0.76      0.73      0.74     49924\n",
+      "weighted avg       0.83      0.83      0.83     49924\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "conf_mat"
+    "print(classification_report(target, y_pred))"
    ]
   },
   {
@@ -521,6 +571,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
