changed to relative address

--- a/docs/reports/report1.ipynb
+++ b/docs/reports/report1.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -85,7 +85,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
     "#  Load dataset \n",
     "# df = pd.read_csv('D:/Github/OkCupid/Data/profiles.csv', usecols = ['education', 'essay0', 'essay1', 'essay2', 'essay3', 'essay7', 'essay8', 'essay9', 'age', 'sex'])\n",
     "# n = df.shape[0]\n",
-    "df = pd.read_csv('D:/projects/okcupid/data/raw/profiles.csv')\n",
+    "df = pd.read_csv('../../data/raw/profiles.csv')\n",
     "df.columns"
    ]
   },
