--- a/docs/reports/report5.ipynb
+++ b/docs/reports/report5.ipynb
@@ -514,6 +514,7 @@
     }
    ],
    "source": [
+    "# Solver = lbfgs\n",
     "# merge vectorized text data and scaled numeric data\n",
     "process_and_join_features = Pipeline([\n",
     "    ('features', FeatureUnion([\n",
@@ -530,20 +531,7 @@
     "    ('clf', LogisticRegression(random_state=0,max_iter=1000, solver='lbfgs', penalty='l2', class_weight='balanced'))\n",
     "])\n",
     "\n",
-    "# process_and_join_features = Pipeline([\n",
-    "#     ('features', FeatureUnion([\n",
-    "#             ('numeric_features', Pipeline([\n",
-    "#                 ('selector', get_numeric_data),\n",
-    "#                 ('scaler', preprocessing.StandardScaler())\n",
-    "                \n",
-    "#             ])),\n",
-    "#              ('text_features', Pipeline([\n",
-    "#                 ('selector', get_text_data),\n",
-    "#                 ('vec', TfidfVectorizer(binary=False, ngram_range=(1, 2), lowercase=True))\n",
-    "#             ]))\n",
-    "#          ])),\n",
-    "#     ('clf', LogisticRegression(random_state=0,max_iter=1000, solver='lbfgs', penalty='l2', class_weight='balanced'))\n",
-    "# ])\n",
+    "\n",
     "\n",
     "# merge vectorized text data and scaled numeric data\n",
     "process_and_join_features.fit(X_train, y_train)\n",
@@ -785,20 +773,6 @@
     "                      title='Confusion Matrix')\n",
     "print(classification_report(y_val, predictions))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Avg length of sentence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
